--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ body{
 }
 .players{
      
-   margin: 2px;
+   
    background-color: rgb(0, 132, 255);
+   margin:100px ;
    
 
 
@@ -13,24 +14,28 @@ body{
 .container-box{
     display: flex;
    width: 100%;
+   margin: 100px;
    
-    margin:60px ;
+    
    
     
     }
     .container-box img{
         width: 100%;
-        margin-left: 20px;
-        margin-top: 5px;
+        margin: 20px;
+        
+    }
+    .container-box img:hover{
+        border: 5px solid rgb(217, 255, 0);   
     }
     .text-box{
-        margin-top: 20px;
-        width: 100%;
+        margin-top: 2px;
+        width: 50%;
         color: white;
-        width: 1440px;
-        height: 3750px;
         font-size: 54px;
-        
-        
-       
     }
+       
+         .text-box:hover
+         {
+              border: 4px solid rgba(0, 204, 255, 0.897);
+         }
